React Red  Onion

--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -9,6 +9,7 @@
     font-weight: bold;
     background-color: transparent;
     transition: .5s;
+    outline: none;
 }
 
 .details__btn:hover{
@@ -16,3 +17,4 @@
     color: white;
 
 }
+
